<resources>
    <string name="app_name">VisitorManagement</string>
    <string name="admin">Leaseweb Admin</string>
    <string name="visitor">Visitor</string>
    <string name="employee">Leaseweb Employee</string>
    <string name="checkin">Checkin Time</string>
    <string name="checkout">Checkout Time</string>
    <string name="delete">Delete Item</string>
    <string name="modify">Modify Item</string>
    <string name="search">Search Item</string>
    <string name="display">Display all items</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Last/Family name</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Enter the phone number</string>
    <string name="reason_for_visit">Reason for visit</string>
    <string name="reason_for_visit_hint">Enter the reason for visit</string>
    <string name="person_to_meet">Appointment With</string>
    <string name="person_to_meet_hint">Enter the name of the person you want to meet</string>
    <string name="coming_from">Coming From</string>
    <string name="coming_from_hint">Where are you from?</string>
    <string name="department">Department</string>
    <string name="clear_button">Clear</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="checkin_button">CHECKIN</string>
    <string name="search_hint">Enter the item name</string>
    <string name="employee_Details">Employee Details</string>
    <string name="done">DONE</string>
    <string name="feedback">About</string>
    <string name="appointmentWith">Appointment With</string>
    <string name="license_plate">License Plate</string>
    <string name="badge_numbner">Badge Number</string>


    <string-array name="location">
        <item>AMS01</item>
        <item>FRA01</item>
        <item>PHX01</item>
        <item>WDC01</item>
        <item>LON01</item>
        <item>SGP01</item>
    </string-array>
    <string name="location_prompt">Choose a location</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>


    <string name="visitors">VISITORS</string>
    <string name="employees">LEASEWEB EMPLOYEES</string>
    <string name="suppliers">SUPPLIERS</string>

</resources>
